clusters/cluster0/kubernetes/apps/gregbob/gregbob/landing/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: landing
  name: landing
  namespace: gregbob
spec:
  template:
    metadata:
      labels:
        app: landing
    spec:
      containers:
        - image: szkud/gregbobnet:latest
          imagePullPolicy: Always
          name: landing
          ports:
          - name: landing-port
            containerPort: 80
            protocol: TCP
          resources:
            requests:
              memory: 350Mi
              cpu: 10m
            limits:
              memory: 450Mi
      dnsPolicy: ClusterFirst
      restartPolicy: Always
  selector:
    matchLabels:
      app: landing
