clusters/cluster0/kubernetes/apps/gregbob/gregbob/landing/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: landing-service
  namespace: gregbob
spec:
  type: ClusterIP
  selector:
    app: landing
  ports:
    - name: landing-port
      port: 80
      protocol: TCP
