clusters/cluster0/kubernetes/apps/gregbob/gregbob/landing/landing-route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: landing 
  namespace: gregbob
spec:
  hostnames:
  - gregbob.net
  parentRefs:
  - name: wildcard-gregbob-net
    namespace: network
  rules:
  - backendRefs:
    - name: landing-service
      port: 6767
    matches:
    - path:
        type: PathPrefix
        value: /
